# pd-for-android-fluidsynth

./: README.md  build.gradle
CircleOfFifths/: build.gradle
PdCore/: build.gradle
PdCore/src/main/jni/: Application.mk
PdCore/src/main/jni/libpd/: Android.mk
PdCore/src/main/jni/libpd/libpd_wrapper/: z_libpd.c
PdCore/src/main/jni/libpd/pure-data/extra/fluidsynth~/: .gitignore  CMakeLists.txt  cpptickler.cpp  fluidsynth~.c
PdCore/src/main/jni/libpd/pure-data/extra/fluidsynth~/fluidsynth-2.2.4-android24/lib/arm64-v8a/cmake/Ogg/: OggTargets.cmake
PdCore/src/main/jni/libpd/pure-data/extra/fluidsynth~/fluidsynth-2.2.4-android24/lib/arm64-v8a/pkgconfig/: fluidsynth.pc
PdCore/src/main/jni/libpd/pure-data/extra/fluidsynth~/fluidsynth-2.2.4-android24/lib/armeabi-v7a/cmake/Opus/: OpusConfig.cmake  OpusTargets.cmake
PdCore/src/main/jni/libpd/pure-data/extra/fluidsynth~/fluidsynth-2.2.4-android24/lib/armeabi-v7a/pkgconfig/: fluidsynth.pc
PdCore/src/main/jni/libpd/pure-data/extra/fluidsynth~/fluidsynth-2.2.4-android24/lib/x86/cmake/Opus/: OpusConfigVersion.cmake
PdCore/src/main/jni/libpd/pure-data/extra/fluidsynth~/fluidsynth-2.2.4-android24/lib/x86/cmake/Vorbis/: VorbisTargets.cmake
PdCore/src/main/jni/libpd/pure-data/extra/fluidsynth~/fluidsynth-2.2.4-android24/lib/x86/pkgconfig/: fluidsynth.pc
PdCore/src/main/jni/libpd/pure-data/extra/fluidsynth~/fluidsynth-2.2.4-android24/lib/x86_64/cmake/SndFile/: SndFileTargets.cmake
PdCore/src/main/jni/libpd/pure-data/extra/fluidsynth~/fluidsynth-2.2.4-android24/lib/x86_64/pkgconfig/: fluidsynth.pc
ScenePlayer/: build.gradle
Voice-O-Rama/: build.gradle
